--- a/package.json
+++ b/package.json
@@ -11,8 +11,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.10",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "eslint": "^7.7.0",
+    "eslint-config-standard-with-typescript": "^11.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "git-commit-msg-linter": "^2.4.4"
+  },
+  "dependencies": {
+    "module-alias": "^2.2.2"
   }
 }
