--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint": "^7.7.0",
     "eslint-config-standard-with-typescript": "^11.0.0",
@@ -23,10 +21,16 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "git-commit-msg-linter": "^2.4.4"
+    "git-commit-msg-linter": "^2.4.4",
+    "jest": "^26.6.3",
+    "sequelize-cli": "^6.2.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "_moduleAliases": {
     "@": "dist"
