--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "cross-env NODE_ENV=test npx sequelize-cli db:create && cross-env NODE_ENV=test npx sequelize-cli db:migrate",
     "test": "jest",
     "test:staged": "npm test -- --findRelatedTests"
   },
@@ -15,6 +16,7 @@
     "@types/node": "^14.14.10",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "cross-env": "^7.0.2",
     "eslint": "^7.7.0",
     "eslint-config-standard-with-typescript": "^11.0.0",
     "eslint-plugin-import": "^2.22.0",
@@ -23,14 +25,18 @@
     "eslint-plugin-standard": "^4.0.1",
     "git-commit-msg-linter": "^2.4.4",
     "jest": "^26.6.3",
+    "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "module-alias": "^2.2.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "5.21.10",
+    "sequelize-typescript": "^1.1.0",
+    "uuid4": "^2.0.2"
   },
   "_moduleAliases": {
     "@": "dist"
