--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/validator": "^13.1.0",
@@ -31,6 +32,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "module-alias": "^2.2.2",
     "mysql2": "^2.2.5",
