--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/validator": "^13.1.0",
@@ -34,6 +35,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "mysql2": "^2.2.5",
     "sequelize": "5.21.10",
