--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "cross-env": "^7.0.2",
@@ -29,6 +30,7 @@
     "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
