--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "pretest": "cross-env NODE_ENV=test npx sequelize-cli db:create && cross-env NODE_ENV=test npx sequelize-cli db:migrate",
     "test": "jest",
-    "test:staged": "npm test -- --findRelatedTests"
+    "test:staged": "npm test -- --findRelatedTests",
+    "dev": "sucrase-node src/main/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
+    "sucrase": "^3.15.0",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
