--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "git-commit-msg-linter": "^2.4.4",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
     "sucrase": "^3.15.0",
