--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
-    "@types/validator": "^13.1.0",
+    "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.7.0",
@@ -45,7 +45,8 @@
     "mysql2": "^2.2.5",
     "sequelize": "5.21.10",
     "sequelize-typescript": "^1.1.0",
-    "uuid4": "^2.0.2"
+    "uuid4": "^2.0.2",
+    "validator": "^13.5.1"
   },
   "_moduleAliases": {
     "@": "src"
